fixed layout issue causing horizontal scroll. added discord links

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -238,3 +238,7 @@ h6 {
   z-index: -1;
   pointer-events: none;
 }
+
+/* * {
+  outline: green 2px solid;
+} */
